--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US" itemscope itemtype="http://schema.org/WebPage">
-    <!-- Mirrored from sites.google.com/universitadipavia.it/provamed/home-page by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Feb 2021 13:45:04 GMT -->
-    <!-- Added by HTTrack -->
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <!-- /Added by HTTrack -->
     <head>
         <meta charset="utf-8" />
         <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
@@ -90,7 +87,7 @@
         <link rel="icon" href="https://ssl.gstatic.com/atari/images/favicon_2.ico" />
         <meta property="og:title" content="MedPV" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://sites.google.com/universitadipavia.it/provamed/home-page" />
+        <meta property="og:url" content="https://medpv.github.io/index.html" />
         <meta
             property="og:description"
             content="
@@ -102,7 +99,7 @@ Studenti medicina e chirurgia unipv"
             content="
 Studenti medicina e chirurgia unipv"
         />
-        <meta itemprop="url" content="https://sites.google.com/universitadipavia.it/provamed/home-page" />
+        <meta itemprop="url" content="https://medpv.github.io/index.html" />
         <link href="https://fonts.googleapis.com/css?family=Oswald%3A400%2C600%2C700%7COpen%20Sans%3A400%2C600%2C700&amp;display=swap" rel="stylesheet" nonce="IWiWZ56FPSbFN/zDNNzHmA" />
         <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500|Roboto:300,400,500,700|Source+Code+Pro:400,700&amp;display=swap" rel="stylesheet" nonce="IWiWZ56FPSbFN/zDNNzHmA" />
         <link rel="stylesheet" href="https://www.gstatic.com/_/atari/_/ss/k=atari.vw.p29eGvBx4RA.L.X.O/d=1/ct=zgms/rs=AGEqA5nWPVGFPvG-Eob20ALDAnt5yGRqxQ" nonce="IWiWZ56FPSbFN/zDNNzHmA" />
@@ -1494,7 +1491,7 @@ Studenti medicina e chirurgia unipv"
                 null,
                 1000,
                 null,
-                "home-page.html",
+                "index.html",
                 null,
                 null,
                 null,
@@ -1614,7 +1611,7 @@ Studenti medicina e chirurgia unipv"
                 webPropertyId: "",
                 showDebug: false,
                 hashedSiteId: "0d3c19b4f440bfc76b20dea62cac930cc06eeb73338adab109b35f95524b1822",
-                normalizedPath: "universitadipavia.it/provamed/home-page",
+                normalizedPath: "medpv.github.io/index.html",
                 pageTitle: "Home page",
             };
             function gapiLoaded() {
@@ -1850,7 +1847,7 @@ Studenti medicina e chirurgia unipv"
                                 <div class="VLoccc K5Zlne ELAV1d" jsname="rtFGi">
                                     <div class="Pvc6xe">
                                         <div jsname="I8J07e" class="TlfmSc YSH9J">
-                                            <a class="GAuSPc" jsname="jIujaf" href="home-page.html">
+                                            <a class="GAuSPc" jsname="jIujaf" href="index.html">
                                                 <img
                                                     src="https://lh5.googleusercontent.com/gTRQxYma0nVP3g8c6nex3XXkCdorUrF3Aa_zpbTcvmpIBABynWyvSvIOd2lhntXmoq3msSKnCg=w16383"
                                                     class="lzy1Td"
@@ -1998,7 +1995,7 @@ Studenti medicina e chirurgia unipv"
                                                         jscontroller="HYv29e"
                                                         jsaction="JIbuQc:dQ6O0c;"
                                                         jsname="xx9PJb"
-                                                        data-abuse-proto='%.@.null,null,"https://sites.google.com/universitadipavia.it/provamed/home-page",null,null,[],[]]'
+                                                        data-abuse-proto='%.@.null,null,"https://medpv.github.io/index.html",null,null,[],[]]'
                                                     >
                                                         <div class="jO7h3c">Report abuse</div>
                                                     </div>
@@ -2054,7 +2051,7 @@ Studenti medicina e chirurgia unipv"
                                     <div class="YkaBSd">
                                         <div class="iBkmkf"><span>Page updated</span> <span jsname="CFIm1b" class="dji00c" jsaction="AHmuwe:eGiyHb; mouseover:eGiyHb;" tabindex="0" role="contentinfo"></span></div>
                                     </div>
-                                    <div class="YkaBSd" jscontroller="HYv29e" jsaction="click:dQ6O0c;" data-abuse-proto='%.@.null,null,"https://sites.google.com/universitadipavia.it/provamed/home-page",null,null,[],[]]'>
+                                    <div class="YkaBSd" jscontroller="HYv29e" jsaction="click:dQ6O0c;" data-abuse-proto='%.@.null,null,"https://medpv.github.io/index.html",null,null,[],[]]'>
                                         <div role="button" class="U26fgb kpPxtd J7BuEb" jsshadow aria-label="Report abuse" aria-disabled="false" tabindex="0">Report abuse</div>
                                     </div>
                                 </div>
@@ -2081,6 +2078,5 @@ Studenti medicina e chirurgia unipv"
         </div>
         <div jscontroller="YV8yqd" jsaction="rcuQ6b:npT2md"><div id="docs-aria-speakable" aria-live="assertive" aria-relevant="additions" aria-atomic="true" aria-hidden="false" role="region" class="IWfHH"></div></div>
     </body>
-    <!-- Mirrored from sites.google.com/universitadipavia.it/provamed/home-page by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Feb 2021 13:45:04 GMT -->
 </html>
 
