--- a/index.html
+++ b/index.html
@@ -3,84 +3,6 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <head>
         <meta charset="utf-8" />
-        <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
-            var DOCS_timing = {};
-            DOCS_timing["sl"] = new Date().getTime();
-        </script>
-        <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
-            function _DumpException(e) {
-                throw e;
-            }
-        </script>
-        <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
-            _docs_flag_initialData = {
-                "atari-eiicg": false,
-                "atari-eiitev": false,
-                "docs-sup": "",
-                "docs-eea": false,
-                "docs-ecci": false,
-                "docs-ipmmp": true,
-                "docs-esi": false,
-                "docs-liap": "/logImpressions",
-                ilcm: {
-                    eui: "AHKXmL1eZhs5QNEGGw6LTgcvuz6gMZoMzpH7pptqpYBk5vvafvH6SzyJGmE-1jgv2Lp9raXcPoNb",
-                    je: 1,
-                    sstu: 1612878304133000,
-                    si: "CPeEifP33O4CFYmgHwodWx4MZA",
-                    gsc: null,
-                    ei: [
-                        5711808,
-                        14101550,
-                        14101442,
-                        14100834,
-                        5714628,
-                        5713211,
-                        5711850,
-                        14100854,
-                        5703022,
-                        5703839,
-                        14101462,
-                        5706832,
-                        5707711,
-                        14101538,
-                        14101510,
-                        14101430,
-                        5709892,
-                        5721004,
-                        5715290,
-                        5722370,
-                        5712373,
-                        5714550,
-                        5720925,
-                        5704621,
-                        14101454,
-                        5719651,
-                        14101502,
-                        5713207,
-                        5720060,
-                        5712211,
-                        5706836,
-                        5722301,
-                        5708870,
-                        5713049,
-                    ],
-                    crc: 0,
-                    cvi: [],
-                },
-                "docs-ccdil": false,
-                "docs-eil": true,
-                "docs-eoi": false,
-                info_params: {},
-                "docs-enpf": false,
-                "atari-jefp": "/_/view/jserror",
-                "docs-jern": "view",
-                "atari-rhpp": "/_/view",
-            };
-            _docs_flag_cek = null;
-            if (window["DOCS_timing"]) {
-                DOCS_timing["ifdld"] = new Date().getTime();
-            }
-        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="referrer" content="origin" />
@@ -88,17 +10,9 @@
         <meta property="og:title" content="MedPV" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://medpv.github.io/index.html" />
-        <meta
-            property="og:description"
-            content="
-Studenti medicina e chirurgia unipv"
-        />
+        <meta property="og:description" content="Studenti medicina e chirurgia unipv" />
         <meta itemprop="name" content="MedPV" />
-        <meta
-            itemprop="description"
-            content="
-Studenti medicina e chirurgia unipv"
-        />
+        <meta itemprop="description" content="Studenti medicina e chirurgia unipv" />
         <meta itemprop="url" content="https://medpv.github.io/index.html" />
         <link href="https://fonts.googleapis.com/css?family=Oswald%3A400%2C600%2C700%7COpen%20Sans%3A400%2C600%2C700&amp;display=swap" rel="stylesheet" nonce="IWiWZ56FPSbFN/zDNNzHmA" />
         <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500|Roboto:300,400,500,700|Source+Code+Pro:400,700&amp;display=swap" rel="stylesheet" nonce="IWiWZ56FPSbFN/zDNNzHmA" />
@@ -1132,552 +1046,8 @@ Studenti medicina e chirurgia unipv"
                 }
             }
         </style>
-        <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
-            _at_config = [
-                null,
-                "AIzaSyCF97XfLoejM9NhWDAZeOcjC6kOEsEmv6A",
-                "897606708560-a63d8ia0t9dhtpdt4i3djab2m42see7o.apps.googleusercontent.com",
-                null,
-                null,
-                "v2",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                "https://content.googleapis.com/",
-                "SITES_%s",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                [
-                    "AHKXmL1eZhs5QNEGGw6LTgcvuz6gMZoMzpH7pptqpYBk5vvafvH6SzyJGmE-1jgv2Lp9raXcPoNb",
-                    1,
-                    "CPeEifP33O4CFYmgHwodWx4MZA",
-                    1612878304133000,
-                    [
-                        5703022,
-                        5703839,
-                        5704621,
-                        5706832,
-                        5706836,
-                        5707711,
-                        5708870,
-                        5709892,
-                        5711808,
-                        5711850,
-                        5712211,
-                        5712373,
-                        5713049,
-                        5713207,
-                        5713211,
-                        5714550,
-                        5714628,
-                        5715290,
-                        5719651,
-                        5720060,
-                        5720925,
-                        5721004,
-                        5722301,
-                        5722370,
-                        14100834,
-                        14100854,
-                        14101430,
-                        14101442,
-                        14101454,
-                        14101462,
-                        14101502,
-                        14101510,
-                        14101538,
-                        14101550,
-                    ],
-                ],
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                "https://drive.google.com/",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                1,
-                1,
-                null,
-                0,
-                1,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                "v2internal",
-                "https://docs.google.com/",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                "https://sites.google.com/new/",
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                1,
-                "",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                5,
-                null,
-                null,
-                "https://accounts.google.com/o/oauth2/auth",
-                "https://accounts.google.com/o/oauth2/postmessageRelay",
-                null,
-                null,
-                null,
-                null,
-                78,
-                "https://sites.google.com/new/?usp\u003dviewer_footer",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                [],
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                "https://www.gstatic.com/atari/embeds/5de913a2354e93acf4d43c4db53928e5/intermediate-frame-minified.html",
-                0,
-                null,
-                "v2beta",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                4,
-                "https://accounts.google.com/o/oauth2/iframe",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                "https://1670832927-atari-embeds.googleusercontent.com/embeds/16cb204cf3a9d4d223a0a3fd8b0eec5d/inner-frame-minified.html",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                1000,
-                null,
-                "index.html",
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                "",
-                null,
-                null,
-                null,
-                null,
-                0,
-                0,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                0,
-                0,
-                0,
-                null,
-                null,
-                [1612878304145, "atari_2021.05-Tue-0743_RC03", "355679115", null, 1],
-                null,
-                null,
-                null,
-                null,
-                0,
-                null,
-                null,
-                0,
-                1,
-                0,
-                0,
-                null,
-                null,
-                null,
-                0,
-                0,
-                20,
-                500,
-                "https://domains.google.com/",
-                null,
-                0,
-                null,
-                0,
-                null,
-                0,
-                null,
-                0,
-            ];
-            window.globals = {
-                enableAnalytics: true,
-                webPropertyId: "",
-                showDebug: false,
-                hashedSiteId: "0d3c19b4f440bfc76b20dea62cac930cc06eeb73338adab109b35f95524b1822",
-                normalizedPath: "medpv.github.io/index.html",
-                pageTitle: "Home page",
-            };
-            function gapiLoaded() {
-                if (globals.gapiLoaded == undefined) {
-                    globals.gapiLoaded = true;
-                } else {
-                    globals.gapiLoaded();
-                }
-            }
-            window.messages = [];
-            window.addEventListener &&
-                window.addEventListener("message", function (e) {
-                    if (window.messages && e.data && e.data.magic == "SHIC") {
-                        window.messages.push(e);
-                    }
-                });
-        </script>
-        <script src="https://apis.google.com/js/client.js?onload=gapiLoaded" nonce="IWiWZ56FPSbFN/zDNNzHmA"></script>
-        <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
-            (function () {
-                /*
-
- Copyright The Closure Library Authors.
- SPDX-License-Identifier: Apache-2.0
-*/
-                /*
-
- Copyright 2011 Google LLC.
- SPDX-License-Identifier: Apache-2.0
-*/
-                /*
-
- Copyright 2013 Google LLC.
- SPDX-License-Identifier: Apache-2.0
-*/
-                /*
-
- Copyright 2020 Google LLC.
- SPDX-License-Identifier: Apache-2.0
-*/
-                /*
-
- Copyright 2005 Google LLC.
- SPDX-License-Identifier: Apache-2.0
-*/
-            }.call(this));
-        </script>
-        <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
-            const imageUrl = null;
-            function bgImgLoaded() {
-                if (!globals.headerBgImgLoaded) {
-                    globals.headerBgImgLoaded = new Date().getTime();
-                } else {
-                    globals.headerBgImgLoaded();
-                }
-            }
-            if (imageUrl) {
-                const img = new Image();
-                img.src = imageUrl;
-                img.onload = bgImgLoaded;
-                globals.headerBgImgExists = true;
-            } else {
-                globals.headerBgImgExists = false;
-            }
-        </script>
     </head>
+    
     <body dir="ltr" itemscope itemtype="http://schema.org/WebPage" id="yDmH0d" css="yDmH0d">
         <div jscontroller="pc62j" jsmodel="iTeaXe" jsaction="rcuQ6b:WYd;GvneHb:og1FDd;vbaUQc:uAM5ec;YBArc:dj7Cne;">
             <div jscontroller="X4BaPc" jsaction="rcuQ6b:WYd;o6xM5b:Pg9eo;HuL2Hd:mHeCvf;VMhF5:FFYy5e;sk3Qmb:HI1Mdd;">
@@ -2070,10 +1440,6 @@ Studenti medicina e chirurgia unipv"
                         </div>
                     </div>
                 </div>
-                <script nonce="IWiWZ56FPSbFN/zDNNzHmA">
-                    DOCS_timing["cov"] = new Date().getTime();
-                </script>
-                <script src="https://www.gstatic.com/_/atari/_/js/k=atari.vw.en_US.K2wdHjUDb3A.O/d=1/ct=zgms/rs=AGEqA5ltABMXoNPS8CnHTKN15Peu783v2Q/m=view" id="base-js" nonce="IWiWZ56FPSbFN/zDNNzHmA"></script>
             </div>
         </div>
         <div jscontroller="YV8yqd" jsaction="rcuQ6b:npT2md"><div id="docs-aria-speakable" aria-live="assertive" aria-relevant="additions" aria-atomic="true" aria-hidden="false" role="region" class="IWfHH"></div></div>
